--- a/app/views/spree/admin/products/new.html.erb
+++ b/app/views/spree/admin/products/new.html.erb
@@ -54,11 +54,7 @@
       </div>
 
       <div data-hook="new_product_available_on" class="omega col-sm-3">
-        <%= f.field_container :available_on do %>
-          <%= f.label :available_on, Spree.t(:available_on) %>
-          <%= f.error_message_on :available_on %>
-          <%= f.text_field :available_on, :class => 'datepicker fullwidth' %>
-        <% end %>
+        <%= f.hidden_field :available_on, :value => Date.today %>
       </div>
 
     </div>
