--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -72,10 +72,10 @@
               <div class="product-card">
                 <% if product.photo_file_name? %>
                   <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
-                <% elsif image_url product.images.count > 0 %>
+                <% elsif product.images.count > 0 %>
                   <div class="product-image background-image" style="background-image: url(<%= image_url product.images.first.attachment.url(:large) %>);"></div>
                 <% else %>
-                  <div class="product-image background-image" style="background-image: url(<%= image_tag("profile-placeholder.jpg")%>"></div>
+                  <div class="product-image background-image" style="background-image: url(<%= image_tag("profile-placeholder.jpg")%>)"></div>
                 <% end %>
                 <div class="product-info">
                   <h3><%= truncate(product.name, :length => 50) %></h3>
