--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -9,7 +9,7 @@
         <% end %>
       </a>
         <div class="seller-info">
-          <a href= "/<%= @product.suppliers.first.users.first.id %>">
+          <a href= "/<%= @product.suppliers.first.users.first.permalink %>">
             <h3 class="seller-name"><%= @product.suppliers.first.users.first.store_name %></h3>
           </a>
           <p class="seller-location"><i class="fa fa-map-marker"></i> <%= @product.suppliers.first.users.first.city %>, <%= @product.suppliers.first.users.first.state %></p>
@@ -117,14 +117,11 @@
                   <% end %>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="ingredients">
-                  <ul>
-                    <li>This</li>
-                    <li>Is</li>
-                    <li>Where</li>
-                    <li>We</li>
-                    <li>List</li>
-                    <li>Ingredients</li>
-                  </ul>
+                <% if @product.ingredients != "" %>
+                  <%= simple_format(@product.ingredients) %>
+                <% else %>
+                  <p>The seller hasn't specified the ingredients.</p>
+                <% end %>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="shipping-info">
                   <p>This is where we list the user's shipping information.  Prices, places they ship, etc.</p>
