--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
 			<h2 class="text-center">Explore The Most Popular Treats On The Market</h2>
 			<% @products.first(6).each do |product| %>
 			<div class="col-md-4 col-sm-6 col-xs-12 welcome-product">
-				<%= link_to 'store/products/' + product.id.to_s, :class => 'product-link', :itemprop => "name", :title => product.name do %>
+				<%= link_to 'store/products/' + product.slug, :class => 'product-link', :itemprop => "name", :title => product.name do %>
 					<% if product.images.count > 0 %>
 						<%= image_tag product.images.first.attachment.url(:large), :class => 'img-responsive center-block' %>
 					<% else %>
