--- a/app/views/spree/admin/suppliers/_form.html.erb
+++ b/app/views/spree/admin/suppliers/_form.html.erb
@@ -35,27 +35,11 @@
       <%= form.label :url, Spree::Supplier.human_attribute_name(:url) %>:<br />
       <%= form.text_field :url, :class => 'fullwidth text' %>
     <% end %>
-    <%= form.field_container :tax_id do %>
-      <%= form.label :tax_id, Spree::Supplier.human_attribute_name(:tax_id) %>:<br />
-      <%= form.text_field :tax_id, :class => 'fullwidth text' %>
+    <%= form.field_container :users do %>
+      <%= hidden_field_tag 'supplier[user_ids_string]', form.object.user_ids.join(','), :value => spree_current_user.id.to_s %>
     <% end %>
-    <% if spree_current_user.leema_admin? == true %>
-      <%= form.field_container :commission_flat_rate do %>
-        <%= form.label :commission_flat_rate, Spree::Supplier.human_attribute_name(:commission_flat_rate) %>:<br />
-        <%= form.text_field :commission_flat_rate, :class => 'fullwidth text' %>
-      <% end %>
-      <%= form.field_container :commission_percentage do %>
-        <%= form.label :commission_percentage, Spree::Supplier.human_attribute_name(:commission_percentage) %>:<br />
-        <%= form.text_field :commission_percentage, :class => 'fullwidth text', :value => '10' %>
-      <% end %>
-      <%= form.field_container :users do %>
-        <%= form.label :users %><br/>
-        <%= hidden_field_tag 'supplier[user_ids_string]', form.object.user_ids.join(','), class: 'fullwidth user_picker' %>
-      <% end %>
-      <%= form.field_container :active do %>
-        <%= form.label :active, Spree::Supplier.human_attribute_name(:active) %>:<br />
-        <%= form.check_box :active, :checked => true %>
-      <% end %>
+    <%= form.field_container :active do %>
+      <%= hidden_field_tag :active, :checked => true %>
     <% end %>
     <div class='center'>
       <% if form.object.new_record? %>
