Changed profile link to user.permalink. Supplier signup still works.

--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -35,7 +35,7 @@
                 <%= image_tag "leema-nav-logo.jpg", class: 'gravatar' %>
               <% end %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/<%= current_user.id %>">Profile</a></li>
+              <li><a href="/<%= current_user.permalink %>">Profile</a></li>
               <% if current_user.supplier? %>
                 <li><%= link_to "My Store", admin_path %></li>
                 <li><%= link_to "New Product", new_admin_product_path %></li>
