Removed search options in admin/products and admin/orders :

--- a/app/views/spree/admin/shared/_table_filter.html.erb
+++ b/app/views/spree/admin/shared/_table_filter.html.erb
@@ -1,8 +1,10 @@
-<% if content_for?(:table_filter) %>
+<!-- Made this empty to remove the search on product and order pages -->
+
+<!--<% if content_for?(:table_filter) %>
   <div id="table-filter" data-hook class="<%= if content_for?(:sidebar) then 'col-md-10' else 'col-xs-12' end %>">
     <fieldset>
       <legend align="center"><%= yield :table_filter_title %></legend>
       <%= yield :table_filter %>
     </fieldset>
   </div>
-<% end %>
+<% end %>-->
